# planview

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  bootstrap-planview.sh  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_notifications.py  003_add_sharing_and_time_off.py  004_add_activities.py  005_add_subtasks.py  006_add_indexes.py  007_add_notification_prefs_and_time_logged.py  008_add_dependencies_custom_fields_templates_webhooks_2fa.py  009_add_rotas.py
backend/app/: config.py  database.py  main.py
backend/app/api/: activity.py  attachments.py  auth.py  clients.py  comments.py  custom_fields.py  dependencies.py  export.py  imports.py  milestones.py  notifications.py  projects.py  rotas.py  router.py  sharing.py  stats.py  tags.py  tasks.py  teams.py  templates.py  time_off.py  timeline.py  users.py  webhooks.py  workspaces.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  activity.py  attachment.py  base.py  checklist.py  client.py  comment.py  custom_field.py  milestone.py  notification.py  project.py  rota.py  segment.py  sharing.py  tag.py  task.py  task_dependency.py  task_template.py  team.py  time_off.py  user.py  webhook.py  workspace.py
backend/app/schemas/: attachment.py  client.py  comment.py  custom_field.py  milestone.py  notification.py  project.py  rota.py  segment.py  sharing.py  tag.py  task.py  task_dependency.py  task_template.py  team.py  user.py  (+3 more)
(+122 files in other folders)
