[project]
name = "planview"
version = "1.0.0"
description = "Self-hosted visual planning & scheduling tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "python-dateutil>=2.9",
    "email-validator>=2.0",
    "icalendar>=6.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
